--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -68,7 +68,7 @@
 
 <!--else PIZZE-->
 <div class="container py-4" th:if="${photos.size() == 0}">
-    <h4>Non ci sono pizze sul nostro menù</h4>
+    <h4>Non ci sono foto</h4>
 </div>
 <!--/ else PIZZE-->
 
