--- a/src/main/resources/templates/photos/create.html
+++ b/src/main/resources/templates/photos/create.html
@@ -31,22 +31,27 @@
             <input type="text" id="url" class="form-control" th:field="*{url}">
         </div>
 
-
         <!--Categories-->
         <div class="mb-3">
             <div th:each="category : ${categories}">
-
                 <input type="checkbox" th:field="*{categories}" th:value="${category.id}"
                        th:id="|category-${category.id}|">
                 <label th:for="|category-${category.id}|" class="form-label" th:text="${category.name}"></label>
-
             </div>
         </div>
 
+        <hr>
+        <!-- visible -->
+        <div class="col-12">
+            <input type="checkbox" th:field="*{visible}" id="visible">
+            <label for="visible" class="form-label">spunta se vuoi rendere visibile</label>
+        </div>
+        <hr>
+
         <!--SUBMIT-->
-        <div class="col-12 mt-5">
+        <div class="col-12 mt-4 mb-5">
             <!--<a class="btn btn-primary" th:href="@{/books}">Cancel</a>-->
-            <button type="submit" class="btn btn-primary">Salva</button>
+            <button type="submit" class="btn btn-primary px-5 py-3">Salva</button>
         </div>
     </form>
 </div>
