add methods in services

--- a/src/main/resources/templates/photos/edit.html
+++ b/src/main/resources/templates/photos/edit.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:insert="~{fragments/fragments :: resources}">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<th:block th:replace="fragments/fragments :: navbar('photos', '', false)"></th:block>
+
+<div class="container">
+    <h1>Modifica Foto</h1>
+    <form id="photo-form" method="post" th:object="${photo}" th:action="@{|/photos/edit/*{id}|}"
+          class="row gy-3">
+        <!-- errors -->
+        <ul>
+            <li class="text-danger" th:each="err : ${#fields.allErrors() }" th:text="${err}"></li>
+        </ul>
+        <!-- title -->
+        <div class="col-12">
+            <label class="form-label" for="title">Titolo*</label>
+            <input type="text" id="title" class="form-control" th:field="*{title}">
+        </div>
+        <!-- description -->
+        <div class="col-12">
+            <label class="form-label" for="description">Descrizione*</label>
+            <textarea id="description" class="form-control" th:field="*{description}" rows="5"></textarea>
+        </div>
+        <!-- Url -->
+        <div class="col-12">
+            <label class="form-label" for="url">Url-foto*</label>
+            <input type="text" id="url" class="form-control" th:field="*{url}">
+        </div>
+
+        <!--Categories-->
+        <div class="mb-3">
+            <div th:each="category : ${categories}">
+                <input type="checkbox" th:field="*{categories}" th:value="${category.id}"
+                       th:id="|category-${category.id}|">
+                <label th:for="|category-${category.id}|" class="form-label" th:text="${category.name}"></label>
+            </div>
+        </div>
+
+        <hr>
+        <!-- visible -->
+        <div class="col-12">
+            <input type="checkbox" th:field="*{visible}" id="visible">
+            <label for="visible" class="form-label">spunta se vuoi rendere visibile</label>
+        </div>
+        <hr>
+
+        <!--SUBMIT-->
+        <div class="col-12 mt-4 mb-5">
+            <!--<a class="btn btn-primary" th:href="@{/books}">Cancel</a>-->
+            <button type="submit" class="btn btn-primary px-5 py-3">Salva</button>
+        </div>
+    </form>
+</div>
 
 </body>
-</html>
+</html>v
