--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -22,7 +22,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5"
      th:fragment="navbar(current, keyword, showSearch)">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}">LOGO</a>
+        <a class="navbar-brand" th:href="@{/}">
+            <i class="fa-solid fa-camera-retro" style="font-size: 2.5rem"></i>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbar-content"
                 aria-expanded="false" aria-label="Toggle navigation">
