--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" th:href="@{/photos}"
                        th:classAppend="${current == 'photos'} ? active : not-active">Photos</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
                     <a class="nav-link" th:href="@{/categories}"
                        th:classAppend="${current == 'categories'} ? active : not-active">Categories</a>
                 </li>
