--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -24,8 +24,7 @@
         </div>
 
         <div class="col text-end">
-            <a th:href="@{/photos/create}" class="btn btn-primary px-4">
-                <!--               sec:authorize="hasAuthority('ADMIN')"-->
+            <a th:href="@{/photos/create}" class="btn btn-primary px-4" sec:authorize="hasAuthority('ADMIN')">
                 <i class="fa-solid fa-plus"></i>
             </a>
         </div>
@@ -51,12 +50,10 @@
                 <a th:href="@{|/photos/*{id}|}" class="btn btn-primary">
                     <i class="fa-solid fa-expand"></i>
                 </a>
-                <a th:href="@{|/photos/edit/*{id}|}" class="btn btn-primary">
-                    <!--                   sec:authorize="hasAuthority('ADMIN')"-->
+                <a th:href="@{|/photos/edit/*{id}|}" class="btn btn-primary" sec:authorize="hasAuthority('ADMIN')">
                     <i class="fa-solid fa-pen-to-square"></i>
                 </a>
-                <a th:href="@{|/photos/delete/*{id}|}" class="btn btn-primary">
-                    <!--                   sec:authorize="hasAuthority('ADMIN')"-->
+                <a th:href="@{|/photos/delete/*{id}|}" class="btn btn-primary" sec:authorize="hasAuthority('ADMIN')">
                     <i class="fa-solid fa-delete-left"></i>
                 </a>
             </td>
