--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -19,7 +19,7 @@
 
 <!--NAVBAR-->
 <!--DA CORREGERE-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5"
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5 px-4"
      th:fragment="navbar(current, keyword, showSearch)">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/}">
