--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -14,7 +14,7 @@
 
 
 <!--TABLE-->
-<div class="container py-4" th:if="${photos.size() >= 0}">
+<div class="container py-4" th:if="${photos.size() > 0}">
 
     <div th:if="${message}" th:text="${message}" class="text-danger mb-4"></div>
 
