--- a/src/main/resources/templates/msgs/index.html
+++ b/src/main/resources/templates/msgs/index.html
@@ -1,10 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+<head th:insert="~{fragments/fragments :: resources}">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+
 </head>
 <body>
+<th:block th:replace="fragments/fragments :: navbar('msgs', ${keyword}, true)"></th:block>
+
+
+<!--TABLE-->
+<div class="container py-4" th:if="${msgs.size() > 0}">
+
+    <div th:if="${message}" th:text="${message}" class="text-danger mb-4"></div>
+
+    <div class="row d-flex justify-content-center">
+        <div class="col-6">
+            <div class="row mb-4">
+                <div class="col">
+                    <h1>Messaggi:</h1>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="col">
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th scope="col">Email mittente</th>
+                            <th scope="col" class="text-end">Actions</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="msg : ${msgs}" th:object="${msg}">
+                            <td th:text="*{email}"></td>
+                            <td class="text-end">
+                                <a th:href="@{|/msgs/*{id}|}" class="btn btn-primary">
+                                    <i class="fa-solid fa-expand"></i>
+                                </a>
+                                <a th:href="@{|/msgs/delete/*{id}|}" class="btn btn-primary"
+                                   sec:authorize="hasAuthority('ADMIN')">
+                                    <i class="fa-solid fa-delete-left"></i>
+                                </a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+</div>
+<!--TABLE-->
+
+<!--else -->
+<div class="container py-4" th:if="${msgs.size() == 0}">
+    <h4>Non ci sono messaggi</h4>
+</div>
+<!--/ else -->
+
 
 </body>
 </html>
