edit front-end style

--- a/src/main/resources/templates/msgs/index.html
+++ b/src/main/resources/templates/msgs/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-<th:block th:replace="fragments/fragments :: navbar('msgs', ${keyword}, true)"></th:block>
+<th:block th:replace="fragments/fragments :: navbar('msgs', '', false)"></th:block>
 
 
 <!--TABLE-->
