fix some things

--- a/src/main/resources/templates/msgs/show.html
+++ b/src/main/resources/templates/msgs/show.html
@@ -10,8 +10,8 @@
 <div class="container">
     <div class="row">
         <div class="col-6">
-            <h3 class="mb-4">MESSAGIO: [[${msg.email}]]</h3>
-            <p class="mb-3">descrizione: [[${msg.message}]]</p>
+            <h3 class="mb-4">MESSAGGIO: [[${msg.email}]]</h3>
+            <p class="mb-3"><strong>Testo:</strong> [[${msg.message}]]</p>
         </div>
     </div>
 
